--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import { MyLitComponent } from "../lit-components";
+import { MyAstroComponent } from "../components";
 ---
 
-<MyLitComponent name="astro maintianer 🔥" client:load />
+<MyAstroComponent /> 
