no barrel import

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import { MyAstroComponent } from "../components";
+import MyAstroComponent from "../components/MyAstroComponent.astro";
 ---
 
 <MyAstroComponent /> 
