--- a/src/pages/page1.astro
+++ b/src/pages/page1.astro
@@ -1,17 +1,5 @@
 ---
-import { MyAstroComponent1 } from "../components";
+import MyAstroComponent1 from "../components/MyAstroComponent1.astro";
 ---
 
 <MyAstroComponent1 /> 
-
-<style>
-
-/* Some random css */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-</style>
-
